--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
   	<body>
 		<div class="main">
 			<h1>
-				000
+				hello, i'm winter...
 			</h1>
 			<p>
-				000
+				...and goodbye
 			</p>
+			<h3>
+				under construction. maybe?
+			</h3>
 		</div>
   	</body>
 </html>
